# TranscribeAI-Multi-voix-stt

./: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  utils.py
docker/: Dockerfile  docker-compose.yml
env/: .env.example
