[project]
name = "transcribeai-multi-voix-stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asteroid-filterbanks==0.4.0",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorlog==6.10.1",
    "contourpy==1.3.3",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.3.5",
    "cycler==0.12.1",
    "einops==0.8.2",
    "fastapi==0.133.0",
    "filelock==3.24.3",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.2",
    "grpcio==1.78.1",
    "h11==0.16.0",
    "hf-xet==1.3.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.4.1",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "julius==0.2.7",
    "kiwisolver==1.4.9",
    "lightning==2.6.1",
    "lightning-utilities==0.15.3",
    "llvmlite==0.46.0",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.6.1",
    "numba==0.64.0",
    "numpy==2.4.2",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "openai-whisper",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "optuna==4.7.0",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "primepy==1.3",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "pyannote-audio==4.0.4",
    "pyannote-core==6.0.1",
    "pyannote-database==6.1.1",
    "pyannote-metrics==4.0.0",
    "pyannote-pipeline==4.0.0",
    "pyannoteai-sdk==0.4.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.22",
    "pytorch-lightning==2.6.1",
    "pytorch-metric-learning==2.9.0",
    "pyyaml==6.0.3",
    "regex==2026.2.19",
    "requests==2.32.5",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "torch==2.10.0",
    "torch-audiomentations==0.12.0",
    "torch-pitch-shift==1.2.5",
    "torchaudio==2.10.0",
    "torchcodec==0.10.0",
    "torchmetrics==1.8.2",
    "tqdm==4.67.3",
    "triton==3.6.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "c0d2f624c09dc18e709e37c2ad90c039a4eb72a2" }
